css/style.css
section {
	margin: 0 !important;
}

body {
	background-color: white !important;
}

.layer {
    background-color: rgba(128, 128, 128, 0.5);
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 700px;
}

/* - - - - - - - - -
 * 	GENERAL RULES
- - - - - - - - - - */

.section__title {
	font-size: 250%;
	font-family: 'Times New Roman', serif;

	margin: 0;
	padding: 7%;
}

.section__description {
	font-size: 150%;
	font-family: 'Roboto', serif;
	line-height: 1.2em;

	margin: 0;
	padding-bottom: 7%;
}

.btn--block {
	border: 5px solid black;
	background-color: white;
	color: black;

	font-family: 'Roboto Condensed', serif;
	font-size: 115%;
	text-transform: uppercase;

	min-width: 150px;
	min-height: 50px;

	margin-bottom: 7%;
}

.btn--block:hover {
	background-color: black;
	color: white;
}

/* - - - - - - - - -
 * 	WEBSITE HEADER
- - - - - - - - - - */

.jumbotron {
	background-image: url(../images/header_background.jpg);
	background-size: cover;
	height: 700px;
}

#website-header {
	color: white;
	text-transform: uppercase;

	position: relative;
	top: 35%;
}

	#website-header__title {
		font-family: 'Roboto Condensed', sans-serif;
		font-size: 700%;
	}

	#website-header__subtitle {
		font-family: 'Cormorant Garamond', serif;
		font-size: 150%;
		font-style: italic;
	}

/* - - - - - - - - -
 * 	NAV MENU
- - - - - - - - - - */

.nav-menu {
	padding: 20px;
	background-color: rgba(0, 0, 0, 0.8);

	position: fixed;
	top: 0;
	width: 100%;
	z-index: 1000;
}

	.nav-menu .nav-bar {
		font-family: 'Roboto', sans-serif;
		font-size: 150%;
		text-align: center;
	}

		.nav-menu .nav-bar .nav-bar__li {
			display: inline;
			padding: 0 20px;
		}

			.nav-menu .nav-bar .nav-bar__li a {
				color: white;
	    		text-decoration: none;
			}

/* - - - - - - - - -
 * 	ABOUT ME
- - - - - - - - - - */

.about-me {
	background-color: white;
}

/* - - - - - - - - -
 * 	PROJECTS
- - - - - - - - - - */

.projects {
	background-color: rgb(220, 220, 220);
	padding-bottom: 7%;
}

/* Slider Styling */

#projects__slider .project__image {
	width: 100%;
}

.project .project__info {
	color: rgba(0, 0, 0, 1);
	display: none;

	position: absolute;
	width: 100%;
	height: 75%;
	padding: 10px;
	text-align: center;
	margin-top: 25%;
	z-index: 100;
}

	.project .project__info .project__info__title {
		font-size: 250%;
		font-family: 'Roboto Condensed', sans-serif;
	}

	.project .project__info .project__info__description {
		font-size: 150%;
		font-family: 'Roboto Condensed', sans-serif;
	}

/* - - - - - - - - -
 * 	SKILLS
- - - - - - - - - - */

.skills {
	background-color: white;
	padding-bottom: 7%;
}

	.skills__table {
		background-color: white;
		font-family: 'Roboto', sans-serif;
	}

		.skills__table td {
			text-align: left;
			padding-top: 5px;
			padding-bottom: 5px;
		}

.skill {

}

	.skill__language {
		font-size: 175%;
		padding-left: 35px;
		padding-right: 50px;
	}

	.skill__rating {
		font-size: 150%;
		padding-right: 50px;
	}

	.skill__projects {
		font-size: 100%;
		padding-right: 35px;
	}

		.skill__projects a {
			color: black;
			text-decoration: none;
		}

/* - - - - - - - - -
 * 	RESUME
- - - - - - - - - - */

.resume {
	background-color: rgb(220, 220, 220);
}

/* - - - - - - - - -
 * 	CONTACT
- - - - - - - - - - */

.contact {
	background-color: rgb(200, 210, 220);
	height: 100%;
}

.contact .section__description {
	padding-bottom: 0;
}

	#contact__table {
		text-align: center;
		vertical-align: middle;
		margin-top: 50px;
		margin-bottom: 100px;
	}

		#contact__table .contact__icon img {
			width: 8em;
			height: auto;
			padding: 2em;
		}


#contact__table:hover img {
	opacity: 0.6;
}

#contact__table:hover .contact__icon img:hover {
	opacity: 1;
}

/* - - - - - - - - -
 * 	Copyright Section
- - - - - - - - - - */

.copyright {
	background-color: rgb(0, 0, 0);
}

.copyright__text {
	color: rgb(220, 220, 220);
	font-size: 12px;
	padding: 20px;
}

